[package]
name = "Rust_Backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid  = { version = "^0.8", features = ["v4"]}
serde = { version = "1.0", features = ["derive"] }
aws-config = "0.13.0"
aws-sdk-dynamodb = "0.13.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.8"
log = "^0.4"
strum_macros = "0.24.0"
strum = { version = "0.24", features = ["derive"] }
derive_more = "^0.99"
